// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spec/LoadingIcon renders [EMPTY] 1`] = `
<div
  css={
    [
      [
        {
          "backgroundColor": "#c0a793",
          "borderColor": "#3918df",
        },
        null,
        null,
        null,
      ],
      {
        "alignItems": "stretch",
        "cursor": undefined,
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 0,
        "flexShrink": 0,
        "justifyContent": "flex-start",
        "opacity": 1,
        "pointerEvents": "auto",
        "position": "relative",
        "userSelect": "auto",
      },
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    ]
  }
  disabled={null}
  href={null}
>
  <svg
    css={
      {
        "map": undefined,
        "name": "1qscsn4",
        "next": {
          "name": "animation-1xnn55h",
          "next": undefined,
          "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
        },
        "styles": "
    animation: animation-1xnn55h 2s infinite;
",
        "toString": [Function],
      }
    }
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": undefined,
      }
    }
    viewBox="0 0 16 16"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
      fillRule="evenodd"
    />
  </svg>
  <div
    css={
      [
        [
          {
            "backgroundColor": "#c0a793",
            "borderColor": "#3918df",
          },
          null,
          null,
          null,
        ],
        {
          "alignItems": "stretch",
          "cursor": undefined,
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 0,
          "flexShrink": 0,
          "justifyContent": "flex-start",
          "opacity": 1,
          "pointerEvents": "auto",
          "position": "relative",
          "userSelect": "auto",
        },
        [
          {
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": undefined,
          },
          {
            "pointerEvents": "none",
            "position": "fixed",
            "zIndex": 1000,
          },
        ],
      ]
    }
    disabled={null}
    href={null}
  >
    <div
      css={
        [
          [
            {
              "backgroundColor": "#c0a793",
              "borderColor": "#3918df",
            },
            null,
            null,
            null,
          ],
          {
            "alignItems": "flex-end",
            "cursor": undefined,
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "flex-start",
            "opacity": 1,
            "pointerEvents": "none",
            "position": "relative",
            "userSelect": "auto",
          },
          [
            {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "bottom": 100,
              "zIndex": 100,
            },
          ],
        ]
      }
      disabled={null}
      href={null}
    />
  </div>
</div>
`;

exports[`spec/LoadingIcon renders 071f88f99 1`] = `
<div
  css={
    [
      [
        {
          "backgroundColor": "#c0a793",
          "borderColor": "#3918df",
        },
        null,
        null,
        null,
      ],
      {
        "alignItems": "stretch",
        "cursor": undefined,
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 0,
        "flexShrink": 0,
        "justifyContent": "flex-start",
        "opacity": 1,
        "pointerEvents": "auto",
        "position": "relative",
        "userSelect": "auto",
      },
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    ]
  }
  disabled={null}
  href={null}
>
  <svg
    color="#0000ff"
    css={
      {
        "map": undefined,
        "name": "1qscsn4",
        "next": {
          "name": "animation-1xnn55h",
          "next": undefined,
          "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
        },
        "styles": "
    animation: animation-1xnn55h 2s infinite;
",
        "toString": [Function],
      }
    }
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": "#0000ff",
      }
    }
    viewBox="0 0 16 16"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
      fillRule="evenodd"
    />
  </svg>
  <div
    css={
      [
        [
          {
            "backgroundColor": "#c0a793",
            "borderColor": "#3918df",
          },
          null,
          null,
          null,
        ],
        {
          "alignItems": "stretch",
          "cursor": undefined,
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 0,
          "flexShrink": 0,
          "justifyContent": "flex-start",
          "opacity": 1,
          "pointerEvents": "auto",
          "position": "relative",
          "userSelect": "auto",
        },
        [
          {
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": undefined,
          },
          {
            "pointerEvents": "none",
            "position": "fixed",
            "zIndex": 1000,
          },
        ],
      ]
    }
    disabled={null}
    href={null}
  >
    <div
      css={
        [
          [
            {
              "backgroundColor": "#c0a793",
              "borderColor": "#3918df",
            },
            null,
            null,
            null,
          ],
          {
            "alignItems": "flex-end",
            "cursor": undefined,
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "flex-start",
            "opacity": 1,
            "pointerEvents": "none",
            "position": "relative",
            "userSelect": "auto",
          },
          [
            {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "bottom": 100,
              "zIndex": 100,
            },
          ],
        ]
      }
      disabled={null}
      href={null}
    />
  </div>
</div>
`;

exports[`spec/LoadingIcon renders 0442ee715e 1`] = `
<div
  css={
    [
      [
        {
          "backgroundColor": "#c0a793",
          "borderColor": "#3918df",
        },
        null,
        null,
        null,
      ],
      {
        "alignItems": "stretch",
        "cursor": undefined,
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 0,
        "flexShrink": 0,
        "justifyContent": "flex-start",
        "opacity": 1,
        "pointerEvents": "auto",
        "position": "relative",
        "userSelect": "auto",
      },
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    ]
  }
  disabled={null}
  href={null}
>
  <svg
    color="#00ff00"
    css={
      {
        "map": undefined,
        "name": "1qscsn4",
        "next": {
          "name": "animation-1xnn55h",
          "next": undefined,
          "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
        },
        "styles": "
    animation: animation-1xnn55h 2s infinite;
",
        "toString": [Function],
      }
    }
    fill="currentColor"
    height={30}
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": "#00ff00",
      }
    }
    viewBox="0 0 16 16"
    width={30}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
      fillRule="evenodd"
    />
  </svg>
  <div
    css={
      [
        [
          {
            "backgroundColor": "#c0a793",
            "borderColor": "#3918df",
          },
          null,
          null,
          null,
        ],
        {
          "alignItems": "stretch",
          "cursor": undefined,
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 0,
          "flexShrink": 0,
          "justifyContent": "flex-start",
          "opacity": 1,
          "pointerEvents": "auto",
          "position": "relative",
          "userSelect": "auto",
        },
        [
          {
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": undefined,
          },
          {
            "pointerEvents": "none",
            "position": "fixed",
            "zIndex": 1000,
          },
        ],
      ]
    }
    disabled={null}
    href={null}
  >
    <div
      css={
        [
          [
            {
              "backgroundColor": "#c0a793",
              "borderColor": "#3918df",
            },
            null,
            null,
            null,
          ],
          {
            "alignItems": "flex-end",
            "cursor": undefined,
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "flex-start",
            "opacity": 1,
            "pointerEvents": "none",
            "position": "relative",
            "userSelect": "auto",
          },
          [
            {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "bottom": 100,
              "zIndex": 100,
            },
          ],
        ]
      }
      disabled={null}
      href={null}
    />
  </div>
</div>
`;

exports[`spec/LoadingIcon renders 01712ef206 1`] = `
<div
  css={
    [
      [
        {
          "backgroundColor": "#c0a793",
          "borderColor": "#3918df",
        },
        null,
        null,
        null,
      ],
      {
        "alignItems": "stretch",
        "cursor": undefined,
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 0,
        "flexShrink": 0,
        "justifyContent": "flex-start",
        "opacity": 1,
        "pointerEvents": "auto",
        "position": "relative",
        "userSelect": "auto",
      },
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    ]
  }
  disabled={null}
  href={null}
>
  <svg
    color="#ff0000"
    css={
      {
        "map": undefined,
        "name": "1qscsn4",
        "next": {
          "name": "animation-1xnn55h",
          "next": undefined,
          "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
        },
        "styles": "
    animation: animation-1xnn55h 2s infinite;
",
        "toString": [Function],
      }
    }
    fill="currentColor"
    height={20}
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": "#ff0000",
      }
    }
    viewBox="0 0 16 16"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
      fillRule="evenodd"
    />
  </svg>
  <div
    css={
      [
        [
          {
            "backgroundColor": "#c0a793",
            "borderColor": "#3918df",
          },
          null,
          null,
          null,
        ],
        {
          "alignItems": "stretch",
          "cursor": undefined,
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 0,
          "flexShrink": 0,
          "justifyContent": "flex-start",
          "opacity": 1,
          "pointerEvents": "auto",
          "position": "relative",
          "userSelect": "auto",
        },
        [
          {
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": undefined,
          },
          {
            "pointerEvents": "none",
            "position": "fixed",
            "zIndex": 1000,
          },
        ],
      ]
    }
    disabled={null}
    href={null}
  >
    <div
      css={
        [
          [
            {
              "backgroundColor": "#c0a793",
              "borderColor": "#3918df",
            },
            null,
            null,
            null,
          ],
          {
            "alignItems": "flex-end",
            "cursor": undefined,
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "flex-start",
            "opacity": 1,
            "pointerEvents": "none",
            "position": "relative",
            "userSelect": "auto",
          },
          [
            {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "bottom": 100,
              "zIndex": 100,
            },
          ],
        ]
      }
      disabled={null}
      href={null}
    />
  </div>
</div>
`;

exports[`spec/LoadingIcon renders 7df19aa5 1`] = `
<div
  css={
    [
      [
        {
          "backgroundColor": "#c0a793",
          "borderColor": "#3918df",
        },
        null,
        null,
        null,
      ],
      {
        "alignItems": "stretch",
        "cursor": undefined,
        "display": "flex",
        "flexDirection": "column",
        "flexGrow": 0,
        "flexShrink": 0,
        "justifyContent": "flex-start",
        "opacity": 1,
        "pointerEvents": "auto",
        "position": "relative",
        "userSelect": "auto",
      },
      {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      },
    ]
  }
  disabled={null}
  href={null}
>
  <svg
    css={
      {
        "map": undefined,
        "name": "1qscsn4",
        "next": {
          "name": "animation-1xnn55h",
          "next": undefined,
          "styles": "@keyframes animation-1xnn55h{
    from {
        transform: rotate(0deg);
    }
  
    to {
        transform: rotate(720deg);
    }
}",
        },
        "styles": "
    animation: animation-1xnn55h 2s infinite;
",
        "toString": [Function],
      }
    }
    fill="currentColor"
    height={20}
    stroke="currentColor"
    strokeWidth="0"
    style={
      {
        "color": undefined,
      }
    }
    viewBox="0 0 16 16"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clipRule="evenodd"
      d="M13.917 7A6.002 6.002 0 0 0 2.083 7H1.071a7.002 7.002 0 0 1 13.858 0h-1.012z"
      fillRule="evenodd"
    />
  </svg>
  <div
    css={
      [
        [
          {
            "backgroundColor": "#c0a793",
            "borderColor": "#3918df",
          },
          null,
          null,
          null,
        ],
        {
          "alignItems": "stretch",
          "cursor": undefined,
          "display": "flex",
          "flexDirection": "column",
          "flexGrow": 0,
          "flexShrink": 0,
          "justifyContent": "flex-start",
          "opacity": 1,
          "pointerEvents": "auto",
          "position": "relative",
          "userSelect": "auto",
        },
        [
          {
            "bottom": 0,
            "height": undefined,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": undefined,
          },
          {
            "pointerEvents": "none",
            "position": "fixed",
            "zIndex": 1000,
          },
        ],
      ]
    }
    disabled={null}
    href={null}
  >
    <div
      css={
        [
          [
            {
              "backgroundColor": "#c0a793",
              "borderColor": "#3918df",
            },
            null,
            null,
            null,
          ],
          {
            "alignItems": "flex-end",
            "cursor": undefined,
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 0,
            "flexShrink": 0,
            "justifyContent": "flex-start",
            "opacity": 1,
            "pointerEvents": "none",
            "position": "relative",
            "userSelect": "auto",
          },
          [
            {
              "bottom": 0,
              "left": 0,
              "overflow": "hidden",
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "bottom": 100,
              "zIndex": 100,
            },
          ],
        ]
      }
      disabled={null}
      href={null}
    />
  </div>
</div>
`;
